--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <div class="row">
                                 <div class="input-field col s12">
                                 <textarea id="message" class="materialize-textarea"></textarea>
-                                <label for="message">Mesage</label>
+                                <label for="message">Message</label>
                                 </div>
                             </div>
                             <div class="row" id="loaders">
